--- a/assets/css/anindividualproj15.css
+++ b/assets/css/anindividualproj15.css
@@ -243,7 +243,7 @@ p {
   padding-left: 1.5rem;
 }
 
-@media (min-width: 778px) {
+@media (min-width: 768px) {
   .topbar-img {
     margin-top: 4.5rem;
     height: 40vw;
@@ -271,6 +271,14 @@ p {
   }
   #proj-title {
     padding-top: 5rem;
+  }
+}
+
+@media (min-width: 1200px) {
+  .topbar-img {
+    margin-top: 4.5rem;
+    margin-bottom: 4.5rem;
+    height: 40vw;
   }
 }
 /*# sourceMappingURL=anindividualproj15.css.map */
