fixing project team formatting

--- a/assets/css/anindividualproj15.scss
+++ b/assets/css/anindividualproj15.scss
@@ -20,8 +20,17 @@
 }
 
 .team-header {
-    color: hotpink;
+    color: #202020;
     padding-top: 4rem;
+}
+
+h7 {
+    font-weight: 600;
+}
+
+.team-names {
+    text-align: center;
+    font-style: italic;
 }
 
 .row {
