--- a/assets/css/anindividualproj15.css
+++ b/assets/css/anindividualproj15.css
@@ -15,8 +15,22 @@
   float: left;
 }
 
+.hmw {
+  margin-right: 0;
+}
+
 .team-header {
+  color: #202020;
   padding-top: 4rem;
+}
+
+h7 {
+  font-weight: 600;
+}
+
+.team-names {
+  text-align: center;
+  font-style: italic;
 }
 
 .row {
@@ -262,6 +276,329 @@ p {
   }
   .holder {
     margin-left: 4.5rem;
+  }
+  h2 {
+    font-size: 1.5em;
+  }
+  h3 {
+    font-size: 1.17em;
+  }
+  #proj-title {
+    padding-top: 5rem;
+  }
+}
+
+@media (min-width: 1200px) {
+  .topbar-img {
+    margin-top: 4.5rem;
+    margin-bottom: 4.5rem;
+    height: 40vw;
+  }
+  h2 {
+    font-size: 1.5em;
+  }
+  h3 {
+    font-size: 1.17em;
+  }
+  #proj-title {
+    padding-top: 5rem;
+  }
+}
+
+@media (min-width: 1200px) {
+  .topbar-img {
+    margin-top: 4.5rem;
+    margin-bottom: 4.5rem;
+    height: 40vw;
+  }
+  h2 {
+    font-size: 1.5em;
+  }
+  h3 {
+    font-size: 1.17em;
+  }
+  #proj-title {
+    padding-top: 5rem;
+  }
+}
+
+@media (min-width: 1200px) {
+  .topbar-img {
+    margin-top: 4.5rem;
+    margin-bottom: 4.5rem;
+    height: 40vw;
+  }
+  h2 {
+    font-size: 1.5em;
+  }
+  h3 {
+    font-size: 1.17em;
+  }
+  #proj-title {
+    padding-top: 5rem;
+  }
+}
+
+@media (min-width: 1200px) {
+  .topbar-img {
+    margin-top: 4.5rem;
+    margin-bottom: 4.5rem;
+    height: 40vw;
+  }
+  h2 {
+    font-size: 1.5em;
+  }
+  h3 {
+    font-size: 1.17em;
+  }
+  #proj-title {
+    padding-top: 5rem;
+  }
+}
+
+@media (min-width: 1200px) {
+  .topbar-img {
+    margin-top: 4.5rem;
+    margin-bottom: 4.5rem;
+    height: 40vw;
+  }
+  h2 {
+    font-size: 1.5em;
+  }
+  h3 {
+    font-size: 1.17em;
+  }
+  #proj-title {
+    padding-top: 5rem;
+  }
+}
+
+@media (min-width: 1200px) {
+  .topbar-img {
+    margin-top: 4.5rem;
+    margin-bottom: 4.5rem;
+    height: 40vw;
+  }
+  h2 {
+    font-size: 1.5em;
+  }
+  h3 {
+    font-size: 1.17em;
+  }
+  #proj-title {
+    padding-top: 5rem;
+  }
+}
+
+@media (min-width: 1200px) {
+  .topbar-img {
+    margin-top: 4.5rem;
+    margin-bottom: 4.5rem;
+    height: 40vw;
+  }
+  h2 {
+    font-size: 1.5em;
+  }
+  h3 {
+    font-size: 1.17em;
+  }
+  #proj-title {
+    padding-top: 5rem;
+  }
+}
+
+@media (min-width: 1200px) {
+  .topbar-img {
+    margin-top: 4.5rem;
+    margin-bottom: 4.5rem;
+    height: 40vw;
+  }
+  h2 {
+    font-size: 1.5em;
+  }
+  h3 {
+    font-size: 1.17em;
+  }
+  #proj-title {
+    padding-top: 5rem;
+  }
+}
+
+@media (min-width: 1200px) {
+  .topbar-img {
+    margin-top: 4.5rem;
+    margin-bottom: 4.5rem;
+    height: 40vw;
+  }
+  h2 {
+    font-size: 1.5em;
+  }
+  h3 {
+    font-size: 1.17em;
+  }
+  #proj-title {
+    padding-top: 5rem;
+  }
+}
+
+@media (min-width: 1200px) {
+  .topbar-img {
+    margin-top: 4.5rem;
+    margin-bottom: 4.5rem;
+    height: 40vw;
+  }
+  h2 {
+    font-size: 1.5em;
+  }
+  h3 {
+    font-size: 1.17em;
+  }
+  #proj-title {
+    padding-top: 5rem;
+  }
+}
+
+@media (min-width: 1200px) {
+  .topbar-img {
+    margin-top: 4.5rem;
+    margin-bottom: 4.5rem;
+    height: 40vw;
+  }
+  h2 {
+    font-size: 1.5em;
+  }
+  h3 {
+    font-size: 1.17em;
+  }
+  #proj-title {
+    padding-top: 5rem;
+  }
+}
+
+@media (min-width: 1200px) {
+  .topbar-img {
+    margin-top: 4.5rem;
+    margin-bottom: 4.5rem;
+    height: 40vw;
+  }
+  h2 {
+    font-size: 1.5em;
+  }
+  h3 {
+    font-size: 1.17em;
+  }
+  #proj-title {
+    padding-top: 5rem;
+  }
+}
+
+@media (min-width: 1200px) {
+  .topbar-img {
+    margin-top: 4.5rem;
+    margin-bottom: 4.5rem;
+    height: 40vw;
+  }
+  h2 {
+    font-size: 1.5em;
+  }
+  h3 {
+    font-size: 1.17em;
+  }
+  #proj-title {
+    padding-top: 5rem;
+  }
+}
+
+@media (min-width: 1200px) {
+  .topbar-img {
+    margin-top: 4.5rem;
+    margin-bottom: 4.5rem;
+    height: 40vw;
+  }
+  h2 {
+    font-size: 1.5em;
+  }
+  h3 {
+    font-size: 1.17em;
+  }
+  #proj-title {
+    padding-top: 5rem;
+  }
+}
+
+@media (min-width: 1200px) {
+  .topbar-img {
+    margin-top: 4.5rem;
+    margin-bottom: 4.5rem;
+    height: 40vw;
+  }
+  h2 {
+    font-size: 1.5em;
+  }
+  h3 {
+    font-size: 1.17em;
+  }
+  #proj-title {
+    padding-top: 5rem;
+  }
+}
+
+@media (min-width: 1200px) {
+  .topbar-img {
+    margin-top: 4.5rem;
+    margin-bottom: 4.5rem;
+    height: 40vw;
+  }
+  h2 {
+    font-size: 1.5em;
+  }
+  h3 {
+    font-size: 1.17em;
+  }
+  #proj-title {
+    padding-top: 5rem;
+  }
+}
+
+@media (min-width: 1200px) {
+  .topbar-img {
+    margin-top: 4.5rem;
+    margin-bottom: 4.5rem;
+    height: 40vw;
+  }
+  h2 {
+    font-size: 1.5em;
+  }
+  h3 {
+    font-size: 1.17em;
+  }
+  #proj-title {
+    padding-top: 5rem;
+  }
+}
+
+@media (min-width: 1200px) {
+  .topbar-img {
+    margin-top: 4.5rem;
+    margin-bottom: 4.5rem;
+    height: 40vw;
+  }
+  h2 {
+    font-size: 1.5em;
+  }
+  h3 {
+    font-size: 1.17em;
+  }
+  #proj-title {
+    padding-top: 5rem;
+  }
+}
+
+@media (min-width: 1200px) {
+  .topbar-img {
+    margin-top: 4.5rem;
+    margin-bottom: 4.5rem;
+    height: 40vw;
   }
   h2 {
     font-size: 1.5em;
