--- a/assets/css/anindividualproj15.scss
+++ b/assets/css/anindividualproj15.scss
@@ -73,7 +73,7 @@
     text-align: right;
     height: 20%;
     font-style: italic;
-    font-size:1.5re
+    font-size: 1.5re
 }
 
 h2 {
@@ -233,7 +233,13 @@ p {
     transform: translate(-3px, -43px);
 }
 
-#p1, #p2, #p3, #p4, #p5, #p6, #p7{
+#p1,
+#p2,
+#p3,
+#p4,
+#p5,
+#p6,
+#p7 {
     padding-left: 10px;
     margin-bottom: 35px;
 }
@@ -252,13 +258,11 @@ p {
 // MEDIA QUERIES
 
 // Small devices (landscape phones, 576px and up)
-@media (min-width: 576px) {
-    
-}
+@media (min-width: 576px) {}
 
 // Medium devices (tablets, 768px and up)
 @media (min-width: 768px) {
-    
+
     .topbar-img {
         margin-top: 4.5rem;
         height: 40vw;
@@ -294,17 +298,15 @@ p {
     #proj-title {
         padding-top: 5rem;
     }
-    
+
 }
 
 // Large devices (desktops, 992px and up)
-@media (min-width: 992px) {
-    
-}
+@media (min-width: 992px) {}
 
 // Extra large devices (large desktops, 1200px and up)
 @media (min-width: 1200px) {
-     .topbar-img {
+    .topbar-img {
         margin-top: 4.5rem;
         margin-bottom: 4.5rem;
         height: 40vw;
@@ -322,17 +324,15 @@ p {
     #proj-title {
         padding-top: 5rem;
     }
-    
+
 }
 
 // Large devices (desktops, 992px and up)
-@media (min-width: 992px) {
-    
-}
+@media (min-width: 992px) {}
 
 // Extra large devices (large desktops, 1200px and up)
 @media (min-width: 1200px) {
-     .topbar-img {
+    .topbar-img {
         margin-top: 4.5rem;
         margin-bottom: 4.5rem;
         height: 40vw;
@@ -350,17 +350,15 @@ p {
     #proj-title {
         padding-top: 5rem;
     }
-    
+
 }
 
 // Large devices (desktops, 992px and up)
-@media (min-width: 992px) {
-    
-}
+@media (min-width: 992px) {}
 
 // Extra large devices (large desktops, 1200px and up)
 @media (min-width: 1200px) {
-     .topbar-img {
+    .topbar-img {
         margin-top: 4.5rem;
         margin-bottom: 4.5rem;
         height: 40vw;
@@ -377,45 +375,15 @@ p {
     #proj-title {
         padding-top: 5rem;
     }
-    
+
 }
 
 // Large devices (desktops, 992px and up)
-@media (min-width: 992px) {
-    
-}
+@media (min-width: 992px) {}
 
 // Extra large devices (large desktops, 1200px and up)
 @media (min-width: 1200px) {
-     .topbar-img {
-        margin-top: 4.5rem;
-        margin-bottom: 4.5rem;
-        height: 40vw;
-
-    }
-
-    h2 {
-        font-size: 1.5em;
-    }
-
-    h3 {
-        font-size: 1.17em;
-    }
-
-    #proj-title {
-        padding-top: 5rem;
-    }
-    
-}
-
-// Large devices (desktops, 992px and up)
-@media (min-width: 992px) {
-    
-}
-
-// Extra large devices (large desktops, 1200px and up)
-@media (min-width: 1200px) {
-     .topbar-img {
+    .topbar-img {
         margin-top: 4.5rem;
         margin-bottom: 4.5rem;
         height: 40vw;
@@ -433,17 +401,15 @@ p {
     #proj-title {
         padding-top: 5rem;
     }
-    
+
 }
 
 // Large devices (desktops, 992px and up)
-@media (min-width: 992px) {
-    
-}
+@media (min-width: 992px) {}
 
 // Extra large devices (large desktops, 1200px and up)
 @media (min-width: 1200px) {
-     .topbar-img {
+    .topbar-img {
         margin-top: 4.5rem;
         margin-bottom: 4.5rem;
         height: 40vw;
@@ -461,17 +427,15 @@ p {
     #proj-title {
         padding-top: 5rem;
     }
-    
+
 }
 
 // Large devices (desktops, 992px and up)
-@media (min-width: 992px) {
-    
-}
+@media (min-width: 992px) {}
 
 // Extra large devices (large desktops, 1200px and up)
 @media (min-width: 1200px) {
-     .topbar-img {
+    .topbar-img {
         margin-top: 4.5rem;
         margin-bottom: 4.5rem;
         height: 40vw;
@@ -489,17 +453,15 @@ p {
     #proj-title {
         padding-top: 5rem;
     }
-    
+
 }
 
 // Large devices (desktops, 992px and up)
-@media (min-width: 992px) {
-    
-}
+@media (min-width: 992px) {}
 
 // Extra large devices (large desktops, 1200px and up)
 @media (min-width: 1200px) {
-     .topbar-img {
+    .topbar-img {
         margin-top: 4.5rem;
         margin-bottom: 4.5rem;
         height: 40vw;
@@ -517,17 +479,15 @@ p {
     #proj-title {
         padding-top: 5rem;
     }
-    
+
 }
 
 // Large devices (desktops, 992px and up)
-@media (min-width: 992px) {
-    
-}
+@media (min-width: 992px) {}
 
 // Extra large devices (large desktops, 1200px and up)
 @media (min-width: 1200px) {
-     .topbar-img {
+    .topbar-img {
         margin-top: 4.5rem;
         margin-bottom: 4.5rem;
         height: 40vw;
@@ -545,17 +505,15 @@ p {
     #proj-title {
         padding-top: 5rem;
     }
-    
+
 }
 
 // Large devices (desktops, 992px and up)
-@media (min-width: 992px) {
-    
-}
+@media (min-width: 992px) {}
 
 // Extra large devices (large desktops, 1200px and up)
 @media (min-width: 1200px) {
-     .topbar-img {
+    .topbar-img {
         margin-top: 4.5rem;
         margin-bottom: 4.5rem;
         height: 40vw;
@@ -573,17 +531,15 @@ p {
     #proj-title {
         padding-top: 5rem;
     }
-    
+
 }
 
 // Large devices (desktops, 992px and up)
-@media (min-width: 992px) {
-    
-}
+@media (min-width: 992px) {}
 
 // Extra large devices (large desktops, 1200px and up)
 @media (min-width: 1200px) {
-     .topbar-img {
+    .topbar-img {
         margin-top: 4.5rem;
         margin-bottom: 4.5rem;
         height: 40vw;
@@ -601,17 +557,15 @@ p {
     #proj-title {
         padding-top: 5rem;
     }
-    
+
 }
 
 // Large devices (desktops, 992px and up)
-@media (min-width: 992px) {
-    
-}
+@media (min-width: 992px) {}
 
 // Extra large devices (large desktops, 1200px and up)
 @media (min-width: 1200px) {
-     .topbar-img {
+    .topbar-img {
         margin-top: 4.5rem;
         margin-bottom: 4.5rem;
         height: 40vw;
@@ -629,17 +583,15 @@ p {
     #proj-title {
         padding-top: 5rem;
     }
-    
+
 }
 
 // Large devices (desktops, 992px and up)
-@media (min-width: 992px) {
-    
-}
+@media (min-width: 992px) {}
 
 // Extra large devices (large desktops, 1200px and up)
 @media (min-width: 1200px) {
-     .topbar-img {
+    .topbar-img {
         margin-top: 4.5rem;
         margin-bottom: 4.5rem;
         height: 40vw;
@@ -657,17 +609,15 @@ p {
     #proj-title {
         padding-top: 5rem;
     }
-    
+
 }
 
 // Large devices (desktops, 992px and up)
-@media (min-width: 992px) {
-    
-}
+@media (min-width: 992px) {}
 
 // Extra large devices (large desktops, 1200px and up)
 @media (min-width: 1200px) {
-     .topbar-img {
+    .topbar-img {
         margin-top: 4.5rem;
         margin-bottom: 4.5rem;
         height: 40vw;
@@ -685,17 +635,15 @@ p {
     #proj-title {
         padding-top: 5rem;
     }
-    
+
 }
 
 // Large devices (desktops, 992px and up)
-@media (min-width: 992px) {
-    
-}
+@media (min-width: 992px) {}
 
 // Extra large devices (large desktops, 1200px and up)
 @media (min-width: 1200px) {
-     .topbar-img {
+    .topbar-img {
         margin-top: 4.5rem;
         margin-bottom: 4.5rem;
         height: 40vw;
@@ -713,17 +661,15 @@ p {
     #proj-title {
         padding-top: 5rem;
     }
-    
+
 }
 
 // Large devices (desktops, 992px and up)
-@media (min-width: 992px) {
-    
-}
+@media (min-width: 992px) {}
 
 // Extra large devices (large desktops, 1200px and up)
 @media (min-width: 1200px) {
-     .topbar-img {
+    .topbar-img {
         margin-top: 4.5rem;
         margin-bottom: 4.5rem;
         height: 40vw;
@@ -741,17 +687,15 @@ p {
     #proj-title {
         padding-top: 5rem;
     }
-    
+
 }
 
 // Large devices (desktops, 992px and up)
-@media (min-width: 992px) {
-    
-}
+@media (min-width: 992px) {}
 
 // Extra large devices (large desktops, 1200px and up)
 @media (min-width: 1200px) {
-     .topbar-img {
+    .topbar-img {
         margin-top: 4.5rem;
         margin-bottom: 4.5rem;
         height: 40vw;
@@ -769,17 +713,15 @@ p {
     #proj-title {
         padding-top: 5rem;
     }
-    
+
 }
 
 // Large devices (desktops, 992px and up)
-@media (min-width: 992px) {
-    
-}
+@media (min-width: 992px) {}
 
 // Extra large devices (large desktops, 1200px and up)
 @media (min-width: 1200px) {
-     .topbar-img {
+    .topbar-img {
         margin-top: 4.5rem;
         margin-bottom: 4.5rem;
         height: 40vw;
@@ -797,17 +739,15 @@ p {
     #proj-title {
         padding-top: 5rem;
     }
-    
+
 }
 
 // Large devices (desktops, 992px and up)
-@media (min-width: 992px) {
-    
-}
+@media (min-width: 992px) {}
 
 // Extra large devices (large desktops, 1200px and up)
 @media (min-width: 1200px) {
-     .topbar-img {
+    .topbar-img {
         margin-top: 4.5rem;
         margin-bottom: 4.5rem;
         height: 40vw;
@@ -825,19 +765,256 @@ p {
     #proj-title {
         padding-top: 5rem;
     }
-    
+
 }
 
 // Large devices (desktops, 992px and up)
-@media (min-width: 992px) {
-    
-}
+@media (min-width: 992px) {}
 
 // Extra large devices (large desktops, 1200px and up)
 @media (min-width: 1200px) {
-     .topbar-img {
+    .topbar-img {
         margin-top: 4.5rem;
         margin-bottom: 4.5rem;
         height: 40vw;
+
+    }
+
+    h2 {
+        font-size: 1.5em;
+    }
+
+    h3 {
+        font-size: 1.17em;
+    }
+
+    #proj-title {
+        padding-top: 5rem;
+    }
+
+}
+
+// Large devices (desktops, 992px and up)
+@media (min-width: 992px) {}
+
+// Extra large devices (large desktops, 1200px and up)
+@media (min-width: 1200px) {
+    .topbar-img {
+        margin-top: 4.5rem;
+        margin-bottom: 4.5rem;
+        height: 40vw;
+    }
+}
+}
+
+h2 {
+    font-size: 1.5em;
+}
+
+h3 {
+    font-size: 1.17em;
+}
+
+#proj-title {
+    padding-top: 5rem;
+}
+
+}
+
+// Large devices (desktops, 992px and up)
+@media (min-width: 992px) {}
+
+// Extra large devices (large desktops, 1200px and up)
+@media (min-width: 1200px) {
+    .topbar-img {
+        margin-top: 4.5rem;
+        margin-bottom: 4.5rem;
+        height: 40vw;
+
+    }
+
+    h2 {
+        font-size: 1.5em;
+    }
+
+    h3 {
+        font-size: 1.17em;
+    }
+
+    #proj-title {
+        padding-top: 5rem;
+    }
+
+}
+
+// Large devices (desktops, 992px and up)
+@media (min-width: 992px) {}
+
+// Extra large devices (large desktops, 1200px and up)
+@media (min-width: 1200px) {
+    .topbar-img {
+        margin-top: 4.5rem;
+        margin-bottom: 4.5rem;
+        height: 40vw;
+
+    }
+
+    h2 {
+        font-size: 1.5em;
+    }
+
+    h3 {
+        font-size: 1.17em;
+    }
+
+    #proj-title {
+        padding-top: 5rem;
+    }
+
+}
+
+// Large devices (desktops, 992px and up)
+@media (min-width: 992px) {}
+
+// Extra large devices (large desktops, 1200px and up)
+@media (min-width: 1200px) {
+    .topbar-img {
+        margin-top: 4.5rem;
+        margin-bottom: 4.5rem;
+        height: 40vw;
+
+    }
+
+    h2 {
+        font-size: 1.5em;
+    }
+
+    h3 {
+        font-size: 1.17em;
+    }
+
+    #proj-title {
+        padding-top: 5rem;
+    }
+
+}
+
+// Large devices (desktops, 992px and up)
+@media (min-width: 992px) {}
+
+// Extra large devices (large desktops, 1200px and up)
+@media (min-width: 1200px) {
+    .topbar-img {
+        margin-top: 4.5rem;
+        margin-bottom: 4.5rem;
+        height: 40vw;
+
+    }
+
+    h2 {
+        font-size: 1.5em;
+    }
+
+    h3 {
+        font-size: 1.17em;
+    }
+
+    #proj-title {
+        padding-top: 5rem;
+    }
+
+}
+
+// Large devices (desktops, 992px and up)
+@media (min-width: 992px) {}
+
+// Extra large devices (large desktops, 1200px and up)
+@media (min-width: 1200px) {
+    .topbar-img {
+        margin-top: 4.5rem;
+        margin-bottom: 4.5rem;
+        height: 40vw;
+
+    }
+
+    h2 {
+        font-size: 1.5em;
+    }
+
+    h3 {
+        font-size: 1.17em;
+    }
+
+    #proj-title {
+        padding-top: 5rem;
+    }
+
+}
+
+// Large devices (desktops, 992px and up)
+@media (min-width: 992px) {}
+
+// Extra large devices (large desktops, 1200px and up)
+@media (min-width: 1200px) {
+    .topbar-img {
+        margin-top: 4.5rem;
+        margin-bottom: 4.5rem;
+        height: 40vw;
+
+    }
+
+    h2 {
+        font-size: 1.5em;
+    }
+
+    h3 {
+        font-size: 1.17em;
+    }
+
+    #proj-title {
+        padding-top: 5rem;
+    }
+
+}
+
+// Large devices (desktops, 992px and up)
+@media (min-width: 992px) {}
+
+// Extra large devices (large desktops, 1200px and up)
+@media (min-width: 1200px) {
+    .topbar-img {
+        margin-top: 4.5rem;
+        margin-bottom: 4.5rem;
+        height: 40vw;
+
+    }
+
+    h2 {
+        font-size: 1.5em;
+    }
+
+    h3 {
+        font-size: 1.17em;
+    }
+
+    #proj-title {
+        padding-top: 5rem;
+    }
+
+}
+
+// Large devices (desktops, 992px and up)
+@media (min-width: 992px) {}
+
+// Extra large devices (large desktops, 1200px and up)
+@media (min-width: 1200px) {
+    .topbar-img {
+        margin-top: 4.5rem;
+        margin-bottom: 4.5rem;
+        height: 40vw;
+    }
+
+    .holder {
+        display: inline;
     }
 }
