--- a/assets/css/anindividualproj15.css
+++ b/assets/css/anindividualproj15.css
@@ -15,7 +15,12 @@
   float: left;
 }
 
+.hmw {
+  padding-bottom: 2rem;
+}
+
 .team-header {
+  color: hotpink;
   padding-top: 4rem;
 }
 
@@ -26,7 +31,7 @@
 #users {
   margin-left: auto;
   margin-right: auto;
-  width: 20vw;
+  width: 12vw;
   height: auto;
 }
 
@@ -68,7 +73,7 @@
   text-align: right;
   height: 20%;
   font-style: italic;
-  font-size: 1.5re;
+  font-size: 1.5rem;
 }
 
 h2 {
@@ -100,7 +105,11 @@ h5 {
   font-style: italic;
   font-weight: 600;
   color: #5B5B5B;
-  padding-bottom: 30px;
+  margin-bottom: 30px;
+}
+
+.question {
+  margin-bottom: 10px;
 }
 
 .topbar-img {
@@ -262,6 +271,329 @@ p {
   }
   .holder {
     margin-left: 4.5rem;
+  }
+  h2 {
+    font-size: 1.5em;
+  }
+  h3 {
+    font-size: 1.17em;
+  }
+  #proj-title {
+    padding-top: 5rem;
+  }
+}
+
+@media (min-width: 1200px) {
+  .topbar-img {
+    margin-top: 4.5rem;
+    margin-bottom: 4.5rem;
+    height: 40vw;
+  }
+  h2 {
+    font-size: 1.5em;
+  }
+  h3 {
+    font-size: 1.17em;
+  }
+  #proj-title {
+    padding-top: 5rem;
+  }
+}
+
+@media (min-width: 1200px) {
+  .topbar-img {
+    margin-top: 4.5rem;
+    margin-bottom: 4.5rem;
+    height: 40vw;
+  }
+  h2 {
+    font-size: 1.5em;
+  }
+  h3 {
+    font-size: 1.17em;
+  }
+  #proj-title {
+    padding-top: 5rem;
+  }
+}
+
+@media (min-width: 1200px) {
+  .topbar-img {
+    margin-top: 4.5rem;
+    margin-bottom: 4.5rem;
+    height: 40vw;
+  }
+  h2 {
+    font-size: 1.5em;
+  }
+  h3 {
+    font-size: 1.17em;
+  }
+  #proj-title {
+    padding-top: 5rem;
+  }
+}
+
+@media (min-width: 1200px) {
+  .topbar-img {
+    margin-top: 4.5rem;
+    margin-bottom: 4.5rem;
+    height: 40vw;
+  }
+  h2 {
+    font-size: 1.5em;
+  }
+  h3 {
+    font-size: 1.17em;
+  }
+  #proj-title {
+    padding-top: 5rem;
+  }
+}
+
+@media (min-width: 1200px) {
+  .topbar-img {
+    margin-top: 4.5rem;
+    margin-bottom: 4.5rem;
+    height: 40vw;
+  }
+  h2 {
+    font-size: 1.5em;
+  }
+  h3 {
+    font-size: 1.17em;
+  }
+  #proj-title {
+    padding-top: 5rem;
+  }
+}
+
+@media (min-width: 1200px) {
+  .topbar-img {
+    margin-top: 4.5rem;
+    margin-bottom: 4.5rem;
+    height: 40vw;
+  }
+  h2 {
+    font-size: 1.5em;
+  }
+  h3 {
+    font-size: 1.17em;
+  }
+  #proj-title {
+    padding-top: 5rem;
+  }
+}
+
+@media (min-width: 1200px) {
+  .topbar-img {
+    margin-top: 4.5rem;
+    margin-bottom: 4.5rem;
+    height: 40vw;
+  }
+  h2 {
+    font-size: 1.5em;
+  }
+  h3 {
+    font-size: 1.17em;
+  }
+  #proj-title {
+    padding-top: 5rem;
+  }
+}
+
+@media (min-width: 1200px) {
+  .topbar-img {
+    margin-top: 4.5rem;
+    margin-bottom: 4.5rem;
+    height: 40vw;
+  }
+  h2 {
+    font-size: 1.5em;
+  }
+  h3 {
+    font-size: 1.17em;
+  }
+  #proj-title {
+    padding-top: 5rem;
+  }
+}
+
+@media (min-width: 1200px) {
+  .topbar-img {
+    margin-top: 4.5rem;
+    margin-bottom: 4.5rem;
+    height: 40vw;
+  }
+  h2 {
+    font-size: 1.5em;
+  }
+  h3 {
+    font-size: 1.17em;
+  }
+  #proj-title {
+    padding-top: 5rem;
+  }
+}
+
+@media (min-width: 1200px) {
+  .topbar-img {
+    margin-top: 4.5rem;
+    margin-bottom: 4.5rem;
+    height: 40vw;
+  }
+  h2 {
+    font-size: 1.5em;
+  }
+  h3 {
+    font-size: 1.17em;
+  }
+  #proj-title {
+    padding-top: 5rem;
+  }
+}
+
+@media (min-width: 1200px) {
+  .topbar-img {
+    margin-top: 4.5rem;
+    margin-bottom: 4.5rem;
+    height: 40vw;
+  }
+  h2 {
+    font-size: 1.5em;
+  }
+  h3 {
+    font-size: 1.17em;
+  }
+  #proj-title {
+    padding-top: 5rem;
+  }
+}
+
+@media (min-width: 1200px) {
+  .topbar-img {
+    margin-top: 4.5rem;
+    margin-bottom: 4.5rem;
+    height: 40vw;
+  }
+  h2 {
+    font-size: 1.5em;
+  }
+  h3 {
+    font-size: 1.17em;
+  }
+  #proj-title {
+    padding-top: 5rem;
+  }
+}
+
+@media (min-width: 1200px) {
+  .topbar-img {
+    margin-top: 4.5rem;
+    margin-bottom: 4.5rem;
+    height: 40vw;
+  }
+  h2 {
+    font-size: 1.5em;
+  }
+  h3 {
+    font-size: 1.17em;
+  }
+  #proj-title {
+    padding-top: 5rem;
+  }
+}
+
+@media (min-width: 1200px) {
+  .topbar-img {
+    margin-top: 4.5rem;
+    margin-bottom: 4.5rem;
+    height: 40vw;
+  }
+  h2 {
+    font-size: 1.5em;
+  }
+  h3 {
+    font-size: 1.17em;
+  }
+  #proj-title {
+    padding-top: 5rem;
+  }
+}
+
+@media (min-width: 1200px) {
+  .topbar-img {
+    margin-top: 4.5rem;
+    margin-bottom: 4.5rem;
+    height: 40vw;
+  }
+  h2 {
+    font-size: 1.5em;
+  }
+  h3 {
+    font-size: 1.17em;
+  }
+  #proj-title {
+    padding-top: 5rem;
+  }
+}
+
+@media (min-width: 1200px) {
+  .topbar-img {
+    margin-top: 4.5rem;
+    margin-bottom: 4.5rem;
+    height: 40vw;
+  }
+  h2 {
+    font-size: 1.5em;
+  }
+  h3 {
+    font-size: 1.17em;
+  }
+  #proj-title {
+    padding-top: 5rem;
+  }
+}
+
+@media (min-width: 1200px) {
+  .topbar-img {
+    margin-top: 4.5rem;
+    margin-bottom: 4.5rem;
+    height: 40vw;
+  }
+  h2 {
+    font-size: 1.5em;
+  }
+  h3 {
+    font-size: 1.17em;
+  }
+  #proj-title {
+    padding-top: 5rem;
+  }
+}
+
+@media (min-width: 1200px) {
+  .topbar-img {
+    margin-top: 4.5rem;
+    margin-bottom: 4.5rem;
+    height: 40vw;
+  }
+  h2 {
+    font-size: 1.5em;
+  }
+  h3 {
+    font-size: 1.17em;
+  }
+  #proj-title {
+    padding-top: 5rem;
+  }
+}
+
+@media (min-width: 1200px) {
+  .topbar-img {
+    margin-top: 4.5rem;
+    margin-bottom: 4.5rem;
+    height: 40vw;
   }
   h2 {
     font-size: 1.5em;
