--- a/assets/css/anindividualproj15.css
+++ b/assets/css/anindividualproj15.css
@@ -778,8 +778,24 @@ h3 {
     margin-bottom: 4.5rem;
     height: 40vw;
   }
-  .holder {
-    display: inline;
+  .cool-row {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+  }
+  .row-details {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+  }
+  #proj-answers {
+    padding-bottom: 2rem;
   }
 }
 /*# sourceMappingURL=anindividualproj15.css.map */
