--- a/assets/css/floatingblocks.scss
+++ b/assets/css/floatingblocks.scss
@@ -38,3 +38,23 @@
 .col-4 {
     margin-right: 0;
 }
+
+.p1 {
+    border-color: red;
+}
+
+.p2 {
+    border-color: yellow;
+}
+
+.p3 {
+    border-color: green;
+}
+
+.p4 {
+    border-color: blue;
+}
+
+.p5 {
+    border-color: grey;
+}
