--- a/assets/css/anindividualproj15.css
+++ b/assets/css/anindividualproj15.css
@@ -66,6 +66,8 @@ h7 {
 }
 
 .user-txt {
+  margin-left: auto;
+  margin-right: auto;
   width: 20vw;
   text-align: center;
 }
@@ -359,459 +361,6 @@ p {
   }
   #proj-title {
     padding-top: 5rem;
-  }
-}
-
-@media (min-width: 1200px) {
-  .topbar-img {
-    margin-top: 4.5rem;
-    margin-bottom: 4.5rem;
-    height: 40vw;
-  }
-  h2 {
-    font-size: 1.5em;
-  }
-  h3 {
-    font-size: 1.17em;
-  }
-  #proj-title {
-    padding-top: 5rem;
-  }
-}
-
-@media (min-width: 1200px) {
-  .topbar-img {
-    margin-top: 4.5rem;
-    margin-bottom: 4.5rem;
-    height: 40vw;
-  }
-  h2 {
-    font-size: 1.5em;
-  }
-  h3 {
-    font-size: 1.17em;
-  }
-  #proj-title {
-    padding-top: 5rem;
-  }
-}
-
-@media (min-width: 1200px) {
-  .topbar-img {
-    margin-top: 4.5rem;
-    margin-bottom: 4.5rem;
-    height: 40vw;
-  }
-  h2 {
-    font-size: 1.5em;
-  }
-  h3 {
-    font-size: 1.17em;
-  }
-  #proj-title {
-    padding-top: 5rem;
-  }
-}
-
-@media (min-width: 1200px) {
-  .topbar-img {
-    margin-top: 4.5rem;
-    margin-bottom: 4.5rem;
-    height: 40vw;
-  }
-  h2 {
-    font-size: 1.5em;
-  }
-  h3 {
-    font-size: 1.17em;
-  }
-  #proj-title {
-    padding-top: 5rem;
-  }
-}
-
-@media (min-width: 1200px) {
-  .topbar-img {
-    margin-top: 4.5rem;
-    margin-bottom: 4.5rem;
-    height: 40vw;
-  }
-  h2 {
-    font-size: 1.5em;
-  }
-  h3 {
-    font-size: 1.17em;
-  }
-  #proj-title {
-    padding-top: 5rem;
-  }
-}
-
-@media (min-width: 1200px) {
-  .topbar-img {
-    margin-top: 4.5rem;
-    margin-bottom: 4.5rem;
-    height: 40vw;
-  }
-  h2 {
-    font-size: 1.5em;
-  }
-  h3 {
-    font-size: 1.17em;
-  }
-  #proj-title {
-    padding-top: 5rem;
-  }
-}
-
-@media (min-width: 1200px) {
-  .topbar-img {
-    margin-top: 4.5rem;
-    margin-bottom: 4.5rem;
-    height: 40vw;
-  }
-  h2 {
-    font-size: 1.5em;
-  }
-  h3 {
-    font-size: 1.17em;
-  }
-  #proj-title {
-    padding-top: 5rem;
-  }
-}
-
-@media (min-width: 1200px) {
-  .topbar-img {
-    margin-top: 4.5rem;
-    margin-bottom: 4.5rem;
-    height: 40vw;
-  }
-  h2 {
-    font-size: 1.5em;
-  }
-  h3 {
-    font-size: 1.17em;
-  }
-  #proj-title {
-    padding-top: 5rem;
-  }
-}
-
-@media (min-width: 1200px) {
-  .topbar-img {
-    margin-top: 4.5rem;
-    margin-bottom: 4.5rem;
-    height: 40vw;
-  }
-  h2 {
-    font-size: 1.5em;
-  }
-  h3 {
-    font-size: 1.17em;
-  }
-  #proj-title {
-    padding-top: 5rem;
-  }
-}
-
-@media (min-width: 1200px) {
-  .topbar-img {
-    margin-top: 4.5rem;
-    margin-bottom: 4.5rem;
-    height: 40vw;
-  }
-  h2 {
-    font-size: 1.5em;
-  }
-  h3 {
-    font-size: 1.17em;
-  }
-  #proj-title {
-    padding-top: 5rem;
-  }
-}
-
-@media (min-width: 1200px) {
-  .topbar-img {
-    margin-top: 4.5rem;
-    margin-bottom: 4.5rem;
-    height: 40vw;
-  }
-  h2 {
-    font-size: 1.5em;
-  }
-  h3 {
-    font-size: 1.17em;
-  }
-  #proj-title {
-    padding-top: 5rem;
-  }
-}
-
-@media (min-width: 1200px) {
-  .topbar-img {
-    margin-top: 4.5rem;
-    margin-bottom: 4.5rem;
-    height: 40vw;
-  }
-  h2 {
-    font-size: 1.5em;
-  }
-  h3 {
-    font-size: 1.17em;
-  }
-  #proj-title {
-    padding-top: 5rem;
-  }
-}
-
-@media (min-width: 1200px) {
-  .topbar-img {
-    margin-top: 4.5rem;
-    margin-bottom: 4.5rem;
-    height: 40vw;
-  }
-  h2 {
-    font-size: 1.5em;
-  }
-  h3 {
-    font-size: 1.17em;
-  }
-  #proj-title {
-    padding-top: 5rem;
-  }
-}
-
-@media (min-width: 1200px) {
-  .topbar-img {
-    margin-top: 4.5rem;
-    margin-bottom: 4.5rem;
-    height: 40vw;
-  }
-  h2 {
-    font-size: 1.5em;
-  }
-  h3 {
-    font-size: 1.17em;
-  }
-  #proj-title {
-    padding-top: 5rem;
-  }
-}
-
-@media (min-width: 1200px) {
-  .topbar-img {
-    margin-top: 4.5rem;
-    margin-bottom: 4.5rem;
-    height: 40vw;
-  }
-  h2 {
-    font-size: 1.5em;
-  }
-  h3 {
-    font-size: 1.17em;
-  }
-  #proj-title {
-    padding-top: 5rem;
-  }
-}
-
-@media (min-width: 1200px) {
-  .topbar-img {
-    margin-top: 4.5rem;
-    margin-bottom: 4.5rem;
-    height: 40vw;
-  }
-  h2 {
-    font-size: 1.5em;
-  }
-  h3 {
-    font-size: 1.17em;
-  }
-  #proj-title {
-    padding-top: 5rem;
-  }
-}
-
-@media (min-width: 1200px) {
-  .topbar-img {
-    margin-top: 4.5rem;
-    margin-bottom: 4.5rem;
-    height: 40vw;
-  }
-  h2 {
-    font-size: 1.5em;
-  }
-  h3 {
-    font-size: 1.17em;
-  }
-  #proj-title {
-    padding-top: 5rem;
-  }
-}
-
-@media (min-width: 1200px) {
-  .topbar-img {
-    margin-top: 4.5rem;
-    margin-bottom: 4.5rem;
-    height: 40vw;
-  }
-  h2 {
-    font-size: 1.5em;
-  }
-  h3 {
-    font-size: 1.17em;
-  }
-  #proj-title {
-    padding-top: 5rem;
-  }
-}
-
-@media (min-width: 1200px) {
-  .topbar-img {
-    margin-top: 4.5rem;
-    margin-bottom: 4.5rem;
-    height: 40vw;
-  }
-}
-
-h2 {
-  font-size: 1.5em;
-}
-
-h3 {
-  font-size: 1.17em;
-}
-
-#proj-title {
-  padding-top: 5rem;
-}
-
-@media (min-width: 1200px) {
-  .topbar-img {
-    margin-top: 4.5rem;
-    margin-bottom: 4.5rem;
-    height: 40vw;
-  }
-  h2 {
-    font-size: 1.5em;
-  }
-  h3 {
-    font-size: 1.17em;
-  }
-  #proj-title {
-    padding-top: 5rem;
-  }
-}
-
-@media (min-width: 1200px) {
-  .topbar-img {
-    margin-top: 4.5rem;
-    margin-bottom: 4.5rem;
-    height: 40vw;
-  }
-  h2 {
-    font-size: 1.5em;
-  }
-  h3 {
-    font-size: 1.17em;
-  }
-  #proj-title {
-    padding-top: 5rem;
-  }
-}
-
-@media (min-width: 1200px) {
-  .topbar-img {
-    margin-top: 4.5rem;
-    margin-bottom: 4.5rem;
-    height: 40vw;
-  }
-  h2 {
-    font-size: 1.5em;
-  }
-  h3 {
-    font-size: 1.17em;
-  }
-  #proj-title {
-    padding-top: 5rem;
-  }
-}
-
-@media (min-width: 1200px) {
-  .topbar-img {
-    margin-top: 4.5rem;
-    margin-bottom: 4.5rem;
-    height: 40vw;
-  }
-  h2 {
-    font-size: 1.5em;
-  }
-  h3 {
-    font-size: 1.17em;
-  }
-  #proj-title {
-    padding-top: 5rem;
-  }
-}
-
-@media (min-width: 1200px) {
-  .topbar-img {
-    margin-top: 4.5rem;
-    margin-bottom: 4.5rem;
-    height: 40vw;
-  }
-  h2 {
-    font-size: 1.5em;
-  }
-  h3 {
-    font-size: 1.17em;
-  }
-  #proj-title {
-    padding-top: 5rem;
-  }
-}
-
-@media (min-width: 1200px) {
-  .topbar-img {
-    margin-top: 4.5rem;
-    margin-bottom: 4.5rem;
-    height: 40vw;
-  }
-  h2 {
-    font-size: 1.5em;
-  }
-  h3 {
-    font-size: 1.17em;
-  }
-  #proj-title {
-    padding-top: 5rem;
-  }
-}
-
-@media (min-width: 1200px) {
-  .topbar-img {
-    margin-top: 4.5rem;
-    margin-bottom: 4.5rem;
-    height: 40vw;
-  }
-  h2 {
-    font-size: 1.5em;
-  }
-  h3 {
-    font-size: 1.17em;
-  }
-  #proj-title {
-    padding-top: 5rem;
-  }
-}
-
-@media (min-width: 1200px) {
-  .topbar-img {
-    margin-top: 4.5rem;
-    margin-bottom: 4.5rem;
-    height: 40vw;
   }
   .cool-row {
     display: -webkit-box;
