--- a/assets/css/anindividualproj15.scss
+++ b/assets/css/anindividualproj15.scss
@@ -148,7 +148,7 @@ h5 {
 
 .topbar-img {
     height: 80vw;
-    margin-top: 5vh;
+   // margin-top: 5vh;
 }
 
 #topbar-hr {
@@ -353,7 +353,7 @@ p {
     }
 
     #proj-title {
-        padding-top: 5rem;
+       // padding-top: 5rem;
     }
 
 }
@@ -1068,7 +1068,7 @@ h3 {
         height: 40vw;
     }
 
-    .cool-row {
+    .cool {
         display: flex;
         align-items: center;
     }
