--- a/assets/css/anindividualproj15.css
+++ b/assets/css/anindividualproj15.css
@@ -147,7 +147,6 @@ h5 {
 
 .topbar-img {
   height: 80vw;
-  margin-top: 5vh;
 }
 
 #topbar-hr {
@@ -339,9 +338,6 @@ p {
   }
   h3 {
     font-size: 1.17em;
-  }
-  #proj-title {
-    padding-top: 5rem;
   }
 }
 
@@ -813,7 +809,7 @@ h3 {
     margin-bottom: 4.5rem;
     height: 40vw;
   }
-  .cool-row {
+  .cool {
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
