--- a/assets/css/anindividualproj15.css
+++ b/assets/css/anindividualproj15.css
@@ -237,45 +237,45 @@ p {
 #underline5 {
   opacity: 60%;
   border-radius: 50px;
-  width: 308px;
+  width: 10rem;
   height: 20px;
   position: absolute;
   z-index: -1;
-  -webkit-transform: translate(-3px, -43px);
-          transform: translate(-3px, -43px);
+  -webkit-transform: translate(-3px, -47px);
+          transform: translate(-3px, -47px);
 }
 
 #underline6 {
   opacity: 60%;
   border-radius: 50px;
-  width: 308px;
+  width: 10rem;
   height: 20px;
   position: absolute;
   z-index: -1;
-  -webkit-transform: translate(-1px, -43px);
-          transform: translate(-1px, -43px);
+  -webkit-transform: translate(-3px, -47px);
+          transform: translate(-3px, -47px);
 }
 
 #underline7 {
   opacity: 60%;
   border-radius: 50px;
-  width: 308px;
+  width: 10rem;
   height: 20px;
   position: absolute;
   z-index: -1;
-  -webkit-transform: translate(-3px, -43px);
-          transform: translate(-3px, -43px);
+  -webkit-transform: translate(-3px, -47px);
+          transform: translate(-3px, -47px);
 }
 
 #underline8 {
   opacity: 60%;
   border-radius: 50px;
-  width: 308px;
+  width: 10rem;
   height: 20px;
   position: absolute;
   z-index: -1;
-  -webkit-transform: translate(-3px, -43px);
-          transform: translate(-3px, -43px);
+  -webkit-transform: translate(-3px, -47px);
+          transform: translate(-3px, -47px);
 }
 
 .p1,
