--- a/assets/css/anindividualproj15.scss
+++ b/assets/css/anindividualproj15.scss
@@ -234,41 +234,41 @@ p {
 #underline5 {
     opacity: 60%;
     border-radius: 50px;
-    width: 308px;
+    width: 10rem;
     height: 20px;
     position: absolute;
     z-index: -1;
-    transform: translate(-3px, -43px);
+    transform: translate(-3px, -47px);
 }
 
 #underline6 {
     opacity: 60%;
     border-radius: 50px;
-    width: 308px;
+    width: 10rem;
     height: 20px;
     position: absolute;
     z-index: -1;
-    transform: translate(-1px, -43px);
+    transform: translate(-3px, -47px);
 }
 
 #underline7 {
     opacity: 60%;
     border-radius: 50px;
-    width: 308px;
+    width: 10rem;
     height: 20px;
     position: absolute;
     z-index: -1;
-    transform: translate(-3px, -43px);
+    transform: translate(-3px, -47px);
 }
 
 #underline8 {
     opacity: 60%;
     border-radius: 50px;
-    width: 308px;
+    width: 10rem;
     height: 20px;
     position: absolute;
     z-index: -1;
-    transform: translate(-3px, -43px);
+    transform: translate(-3px, -47px);
 }
 
 .p1,
