--- a/assets/css/floatingblocks.css
+++ b/assets/css/floatingblocks.css
@@ -40,22 +40,22 @@
 }
 
 .p1 {
-  border-color: red;
+  border-color: #E06B65;
 }
 
 .p2 {
-  border-color: yellow;
+  border-color: #FFFF99;
 }
 
 .p3 {
-  border-color: green;
+  border-color: #99CC99;
 }
 
 .p4 {
-  border-color: blue;
+  border-color: #99CCFF;
 }
 
 .p5 {
-  border-color: grey;
+  border-color: #787878;
 }
 /*# sourceMappingURL=floatingblocks.css.map */
