--- a/assets/css/anindividualproj15.css
+++ b/assets/css/anindividualproj15.css
@@ -40,6 +40,14 @@
   padding-bottom: 1rem;
 }
 
+.deliverable-img {
+  margin-bottom: 5vw;
+  margin-top: 5vw;
+  width: 70%;
+  -o-object-fit: contain;
+     object-fit: contain;
+}
+
 h7 {
   font-weight: 600;
 }
@@ -70,11 +78,6 @@ h7 {
   margin-right: auto;
   width: 20vw;
   text-align: center;
-}
-
-.deliverable-img {
-  width: 90%;
-  height: auto;
 }
 
 #proj-title {
@@ -149,6 +152,7 @@ h5 {
 
 .topbar-img {
   height: 80vw;
+  margin-top: 5vh;
 }
 
 #topbar-hr {
@@ -303,18 +307,6 @@ p {
   padding-left: 1.5rem;
 }
 
-@media (min-width: 576px) {
-  .left {
-    border-left: solid grey;
-    border-left-width: medium;
-  }
-  .right {
-    border-right: solid grey;
-    border-right-width: medium;
-    border-left-width: 0;
-  }
-}
-
 @media (min-width: 768px) {
   .topbar-img {
     margin-top: 4.5rem;
@@ -340,6 +332,18 @@ p {
   }
   h3 {
     font-size: 1.17em;
+  }
+}
+
+@media (min-width: 992px) {
+  .left {
+    border-left: solid grey;
+    border-left-width: medium;
+  }
+  .right {
+    border-right: solid grey;
+    border-right-width: medium;
+    border-left-width: 0;
   }
 }
 
