--- a/assets/css/anindividualproj15.scss
+++ b/assets/css/anindividualproj15.scss
@@ -40,6 +40,13 @@
     padding-bottom: 1rem;
 }
 
+.deliverable-img {
+    margin-bottom: 5vw;
+    margin-top: 5vw;
+    width: 70%;
+    object-fit: contain;
+}
+
 h7 {
     font-weight: 600;
 }
@@ -70,11 +77,6 @@ h7 {
     margin-right: auto;
     width: 20vw;
     text-align: center;
-}
-
-.deliverable-img {
-    width: 90%;
-    height: auto;
 }
 
 #proj-title {
@@ -150,7 +152,7 @@ h5 {
 
 .topbar-img {
     height: 80vw;
-   // margin-top: 5vh;
+    margin-top: 5vh;
 }
 
 #topbar-hr {
@@ -301,16 +303,6 @@ p {
 
 // Small devices (landscape phones, 576px and up)
 @media (min-width: 576px) {
-    .left {
-        border-left: solid grey;
-        border-left-width: medium;
-    }
-    
-    .right {
-        border-right: solid grey;
-        border-right-width: medium;
-        border-left-width: 0;
-    }
 }
 
 // Medium devices (tablets, 768px and up)
@@ -355,7 +347,18 @@ p {
 }
 
 // Large devices (desktops, 992px and up)
-@media (min-width: 992px) {}
+@media (min-width: 992px) {
+    .left {
+        border-left: solid grey;
+        border-left-width: medium;
+    }
+    
+    .right {
+        border-right: solid grey;
+        border-right-width: medium;
+        border-left-width: 0;
+    }
+}
 
 
 // Extra large devices (large desktops, 1200px and up)
