--- a/assets/css/anindividualproj15.css
+++ b/assets/css/anindividualproj15.css
@@ -307,6 +307,19 @@ p {
   padding-left: 1.5rem;
 }
 
+@media (min-width: 576px) {
+  #users {
+    margin: 0 auto;
+    width: 30%;
+    padding-bottom: 2%;
+  }
+  .user-txt {
+    margin: 0 auto;
+    text-align: center;
+    width: 50vw;
+  }
+}
+
 @media (min-width: 768px) {
   .topbar-img {
     margin-top: 4.5rem;
@@ -332,6 +345,16 @@ p {
   }
   h3 {
     font-size: 1.17em;
+  }
+  #users {
+    margin: 0 auto;
+    width: 30%;
+    padding-bottom: 2%;
+  }
+  .user-txt {
+    margin: 0 auto;
+    text-align: center;
+    width: 50vw;
   }
 }
 
