ugly yellow border

--- a/assets/css/floatingblocks.scss
+++ b/assets/css/floatingblocks.scss
@@ -4,7 +4,7 @@ $red: #E06B65;
 $yellow: #FFFF99;
 $green: #99CC99;
 $blue: #99CCFF;
-$gray: #787878;
+$gray: #C4C4C4;
 $black: #202020;
 
 .topbar {
