--- a/assets/css/anindividualproj15.css
+++ b/assets/css/anindividualproj15.css
@@ -303,8 +303,8 @@ p {
 }
 
 .bubbles {
-  width: 5.5em;
-  padding-left: 1.5rem;
+  height: 3em;
+  padding-top: 1rem;
 }
 
 @media (min-width: 576px) {
@@ -321,6 +321,9 @@ p {
 }
 
 @media (min-width: 768px) {
+  .bubbles {
+    width: 5.5em;
+  }
   .topbar-img {
     margin-top: 4.5rem;
     height: 40vw;
@@ -359,6 +362,9 @@ p {
 }
 
 @media (min-width: 992px) {
+  .bubbles {
+    width: 5.5em;
+  }
   .left {
     border-left: solid grey;
     border-left-width: medium;
@@ -383,6 +389,9 @@ p {
 }
 
 @media (min-width: 1200px) {
+  .bubbles {
+    width: 5.5em;
+  }
   .topbar-img {
     margin-top: 4.5rem;
     margin-bottom: 4.5rem;
