--- a/assets/css/floatingblocks.css
+++ b/assets/css/floatingblocks.css
@@ -22,17 +22,17 @@
 
 #underline5 {
   background: #E95633;
-  width: 11.5rem;
+  width: 14rem;
 }
 
 #underline6 {
   background: #E95633;
-  width: 12rem;
+  width: 15rem;
 }
 
 #underline7 {
   background: #E95633;
-  width: 13rem;
+  width: 16rem;
 }
 
 .col-4 {
@@ -57,5 +57,35 @@
 
 .p5 {
   border-color: #C4C4C4;
+}
+
+@media (min-width: 768px) {
+  #underline5 {
+    background: #E95633;
+    width: 12rem;
+  }
+  #underline6 {
+    background: #E95633;
+    width: 12.5rem;
+  }
+  #underline7 {
+    background: #E95633;
+    width: 13.5rem;
+  }
+}
+
+@media (min-width: 992px) {
+  #underline5 {
+    background: #E95633;
+    width: 12rem;
+  }
+  #underline6 {
+    background: #E95633;
+    width: 12.5rem;
+  }
+  #underline7 {
+    background: #E95633;
+    width: 13.5rem;
+  }
 }
 /*# sourceMappingURL=floatingblocks.css.map */
