--- a/assets/css/floatingblocks.css
+++ b/assets/css/floatingblocks.css
@@ -23,22 +23,16 @@
 #underline5 {
   background: #E95633;
   width: 14rem;
-  -webkit-transform: translate(10px, 23px);
-          transform: translate(10px, 23px);
 }
 
 #underline6 {
   background: #E95633;
   width: 15rem;
-  -webkit-transform: translate(10px, 39px);
-          transform: translate(10px, 39px);
 }
 
 #underline7 {
   background: #E95633;
   width: 16rem;
-  -webkit-transform: translate(10px, 39px);
-          transform: translate(10px, 39px);
 }
 
 .col-4 {
@@ -66,24 +60,45 @@
   border-color: #C4C4C4;
 }
 
+@media (min-width: 576px) {
+  #underline1 {
+    background: #E95633;
+  }
+  #underline2 {
+    background: #E95633;
+  }
+  #underline3 {
+    background: #E95633;
+  }
+  #underline4 {
+    background: #E95633;
+  }
+  #underline5 {
+    background: #E95633;
+    width: 14rem;
+  }
+  #underline6 {
+    background: #E95633;
+    width: 15rem;
+  }
+  #underline7 {
+    background: #E95633;
+    width: 16rem;
+  }
+}
+
 @media (min-width: 768px) {
   #underline5 {
     background: #E95633;
     width: 12rem;
-    -webkit-transform: translate(10px, 23px);
-            transform: translate(10px, 23px);
   }
   #underline6 {
     background: #E95633;
     width: 12.5rem;
-    -webkit-transform: translate(10px, 39px);
-            transform: translate(10px, 39px);
   }
   #underline7 {
     background: #E95633;
     width: 12rem;
-    -webkit-transform: translate(10px, 39px);
-            transform: translate(10px, 39px);
   }
 }
 
