adding LinkedIn pages (for those who have them) to member icons

--- a/assets/css/membersv15.css
+++ b/assets/css/membersv15.css
@@ -194,6 +194,12 @@ p {
   font-size: 0.75rem;
 }
 
+.here:hover {
+  cursor: -webkit-grab;
+  cursor: grab;
+  color: #E06B65;
+}
+
 @media (min-width: 576px) {
   .dot {
     height: 12vw;
