image deliv titles

--- a/assets/css/anindividualproj15.css
+++ b/assets/css/anindividualproj15.css
@@ -339,6 +339,11 @@ p {
   height: 3em;
 }
 
+.delivtitle {
+  padding-bottom: 5%;
+  width: 80%;
+}
+
 @media (min-width: 576px) {
   #users {
     margin: 0 auto;
